--- a/gradle.properties
+++ b/gradle.properties
@@ -7,12 +7,14 @@ jgitver=0.10.0-rc03
 dependencyManagement=1.1.3
 springframeworkBoot=3.1.5
 johnrengelmanShadow=7.1.2
-jib=3.3.2
+jib=3.4.0
 protobufVer=0.8.18
 sonarlint=3.3.13
 spotless=6.22.0
 # -------Versions--------
 testcontainersBom=1.19.1
 protobufBom=3.24.4
-guava=32.1.3-jre
-
+guava=31.1-jre
+jmh=1.37
+asm=9.6
+glassfishJson=2.0.1
